--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 	<title>maze-generator</title>
 
-	<script src="libraries/p5.js"></script>
-	<script src="libraries/p5.dom.js"></script>
-	<script src="libraries/p5.sound.js"></script>
-	<script src="sketch.js"></script>
-	<script src="cell.js"></script>
+	<script src="./libraries/p5.js"></script>
+	<script src="./libraries/p5.dom.js"></script>
+	<script src="./libraries/p5.sound.js"></script>
+	<script src="./sketch.js"></script>
+	<script src="./cell.js"></script>
 
 	<style>
 		body {
