--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="./libraries/p5.sound.js"></script>
 	<script src="./sketch.js"></script>
 	<script src="./cell.js"></script>
+	<script src="./grid.js"></script>
 
 	<style>
 		body {
